Fix logo path case sensitivity

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <header class="header">
         <div class="container">
             <a href="/" class="logo">
-                <img src="Assets/pang-logo-teal.svg" alt="Päng logo">
+                <img src="Assets/Pang-logo-teal.svg" alt="Päng logo">
             </a>
         </div>
     </header>
