--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Message Bar -->
     <div class="message-bar">
-        <p>OBS: All data sparas lokalt på din enhet. Din ekonomi förblir privat.</p>
+        <p>OBS: All data sparas lokalt på din enhet.</p>
     </div>
 
     <!-- Header -->
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Appen för dig som vill ha full kontroll på ekonomin.</h1>
+                    <h1>Appen som ger dig full kontroll på ekonomin</h1>
                     <p>Skriv upp dig på väntelistan för att få tillgång till Päng så fort vi lanserar.</p>
                     <ul class="hero-features">
                         <li>Uppnå sparmål</li>
