Mobile optimizations: Improve spacing, update hero text, adjust footer logo, optimize feature cards, and enhance overall mobile UX

--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-text">
-                    <h1>Appen som ger dig full kontroll på ekonomin</h1>
+                    <h1>Appen som ger full kontroll på ekonomin </h1>
                     <p>Skriv upp dig på väntelistan för att få tillgång till Päng så fort vi lanserar.</p>
                     <ul class="hero-features">
                         <li>Uppnå sparmål</li>
