Style improvements and content updates: 1. Updated privacy page styling and layout 2. Added Mailchimp data handling section 3. Fixed spacing and margins across site 4. Improved mobile responsiveness

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <!-- Message Bar -->
     <div class="message-bar">
-        <p>OBS: All data sparas lokalt på din enhet.</p>
+        <p>OBS! All data är 100% privat.</p>
     </div>
 
     <!-- Header -->
@@ -84,14 +84,14 @@
                     <div class="feature-icon">
                         <img src="Assets/savings.svg" alt="Savings icon">
                     </div>
-                    <h3>Översikt av din ekonomi</h3>
+                    <h3>Få en översikt av din ekonomi</h3>
                     <p>Du fyller enkelt i inkomster, utgifter, tillgångar och sparmål. Vi räknar ut allt åt dig.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
                         <img src="Assets/privacy.svg" alt="Privacy icon">
                     </div>
-                    <h3>Utveckling av din ekonomi</h3>
+                    <h3>Se utvecklingen över tid</h3>
                     <p>Du kan se när du uppnår ditt sparmål och hur din privatekonomi utvecklas över tid.</p>
                 </div>
             </div>
@@ -230,8 +230,7 @@
                     </a>
                 </div>
                 <div class="footer-links">
-                    <a href="#">Behandling av personuppgifter</a>
-                    <a href="#">Cookies</a>
+                    <a href="privacy.html">Behandling av personuppgifter</a>
                 </div>
             </div>
         </div>
