Replace hero image with video: 1. Added 1:1 ratio video from S3 2. Added mobile responsive styles 3. Maintained consistent styling with border radius

--- a/index.html
+++ b/index.html
@@ -51,7 +51,12 @@
                     </form>
                 </div>
                 <div class="hero-image">
-                    <img src="Assets/pang-hero-test.png" alt="Päng app interface">
+                    <div class="video-wrapper">
+                        <video width="100%" autoplay loop muted playsinline>
+                            <source src="https://pangwebsite.s3.eu-north-1.amazonaws.com/pang-demo.mp4" type="video/mp4">
+                            Din webbläsare stödjer inte HTML5-video.
+                        </video>
+                    </div>
                 </div>
             </div>
         </div>
