Add social media meta tags and share image: 1. Added Open Graph meta tags 2. Added Twitter Card meta tags 3. Added social share preview image

--- a/index.html
+++ b/index.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Päng - Ekonomi app som hjälper dig att spara</title>
+    <meta name="description" content="Päng är din personliga ekonomiassistent som hjälper dig att ta kontroll över din ekonomi – utan stress. Ladda ner appen och börja spara idag!">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pangapp.se/">
+    <meta property="og:title" content="Päng - Ekonomi app som hjälper dig att spara">
+    <meta property="og:description" content="Päng är din personliga ekonomiassistent som hjälper dig att ta kontroll över din ekonomi – utan stress. Ladda ner appen och börja spara idag!">
+    <meta property="og:image" content="https://pangapp.se/Assets/pang-social-share.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://pangapp.se/">
+    <meta property="twitter:title" content="Päng - Ekonomi app som hjälper dig att spara">
+    <meta property="twitter:description" content="Päng är din personliga ekonomiassistent som hjälper dig att ta kontroll över din ekonomi – utan stress. Ladda ner appen och börja spara idag!">
+    <meta property="twitter:image" content="https://pangapp.se/Assets/pang-social-share.png">
+
     <link rel="icon" type="image/svg+xml" href="Assets/pang-favicon.svg">
     <link rel="stylesheet" href="css/styles.css">
 </head>
