--- a/privacy.html
+++ b/privacy.html
@@ -4,6 +4,22 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Behandling av personuppgifter - Päng</title>
+    <meta name="description" content="Läs om hur Päng hanterar dina personuppgifter och vilka rättigheter du har som användare. Vi värnar om din integritet och säkerhet.">
+    
+    <!-- Open Graph / Facebook -->
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="https://pangapp.se/privacy.html">
+    <meta property="og:title" content="Behandling av personuppgifter - Päng">
+    <meta property="og:description" content="Läs om hur Päng hanterar dina personuppgifter och vilka rättigheter du har som användare. Vi värnar om din integritet och säkerhet.">
+    <meta property="og:image" content="https://pangapp.se/Assets/pang-social-share.png">
+
+    <!-- Twitter -->
+    <meta property="twitter:card" content="summary_large_image">
+    <meta property="twitter:url" content="https://pangapp.se/privacy.html">
+    <meta property="twitter:title" content="Behandling av personuppgifter - Päng">
+    <meta property="twitter:description" content="Läs om hur Päng hanterar dina personuppgifter och vilka rättigheter du har som användare. Vi värnar om din integritet och säkerhet.">
+    <meta property="twitter:image" content="https://pangapp.se/Assets/pang-social-share.png">
+
     <link rel="icon" type="image/svg+xml" href="Assets/pang-favicon.svg">
     <link rel="stylesheet" href="css/styles.css">
 </head>
