Replace travelling.jpg with using-pang-app.jpg in text-media section

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
                     </ul>
                 </div>
                 <div class="media-content">
-                    <img src="Assets/travelling.jpg" alt="Person using Päng app while travelling">
+                    <img src="Assets/using-pang-app.jpg" alt="Person using Päng app">
                 </div>
             </div>
         </div>
