Fix navigation URLs to use absolute paths and remove index.html

--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <a href="/" class="logo">
+            <a href="https://pangapp.se" class="logo">
                 <img src="Assets/Pang-logo-teal.svg" alt="Päng logo">
             </a>
         </div>
