--- a/privacy.html
+++ b/privacy.html
@@ -32,10 +32,10 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <a href="/" class="logo">
+            <a href="https://pangapp.se" class="logo">
                 <img src="Assets/Pang-logo-teal.svg" alt="Päng logo">
             </a>
-            <a href="index.html" class="back-link">
+            <a href="https://pangapp.se" class="back-link">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M19 12H5M5 12L12 19M5 12L12 5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
