Rename privacy.html to cookie-policy and update all references

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -8,14 +8,14 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://pangapp.se/privacy.html">
+    <meta property="og:url" content="https://pangapp.se/cookie-policy">
     <meta property="og:title" content="Behandling av personuppgifter - Päng">
     <meta property="og:description" content="Läs om hur Päng hanterar dina personuppgifter och vilka rättigheter du har som användare. Vi värnar om din integritet och säkerhet.">
     <meta property="og:image" content="https://pangapp.se/Assets/pang-social-share.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://pangapp.se/privacy.html">
+    <meta property="twitter:url" content="https://pangapp.se/cookie-policy">
     <meta property="twitter:title" content="Behandling av personuppgifter - Päng">
     <meta property="twitter:description" content="Läs om hur Päng hanterar dina personuppgifter och vilka rättigheter du har som användare. Vi värnar om din integritet och säkerhet.">
     <meta property="twitter:image" content="https://pangapp.se/Assets/pang-social-share.png">
