--- a/index.html
+++ b/index.html
@@ -251,7 +251,7 @@
                     </a>
                 </div>
                 <div class="footer-links">
-                    <a href="privacy.html">Behandling av personuppgifter</a>
+                    <a href="cookie-policy">Behandling av personuppgifter</a>
                 </div>
             </div>
         </div>
