Add URL rewrite rules and update internal links to remove .html extensions

--- a/cookie-policy.html
+++ b/cookie-policy.html
@@ -93,7 +93,7 @@
                     </a>
                 </div>
                 <div class="footer-links">
-                    <a href="privacy.html">Behandling av personuppgifter</a>
+                    <a href="cookie-policy">Behandling av personuppgifter</a>
                 </div>
             </div>
         </div>
