Update GDPR consent text and remove cookies.html

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 <body>
     <!-- Message Bar -->
     <div class="message-bar">
-        <p>OBS! All data är 100% privat.</p>
+        <p>OBS! All din data är 100% privat.</p>
     </div>
 
     <!-- Header -->
@@ -44,7 +44,7 @@
             <div class="hero-content">
                 <div class="hero-text">
                     <h1>Appen som ger full kontroll på ekonomin </h1>
-                    <p>Skriv upp dig på väntelistan för att få tillgång till Päng så fort vi lanserar.</p>
+                    <p>Skriv upp dig på väntelistan och bli först att få veta när vi lanserar.</p>
                     <ul class="hero-features">
                         <li>Uppnå sparmål</li>
                         <li>Ekonomisk översikt</li>
@@ -59,7 +59,7 @@
                             </div>
                             <div class="gdpr-group">
                                 <input type="checkbox" id="gdpr_consent" name="gdpr[37841]" value="Y" required>
-                                <label for="gdpr_consent">Jag godkänner att Päng lagrar min e-postadress för att skicka information om lansering och nyheter. Du kan när som helst avregistrera dig.</label>
+                                <label for="gdpr_consent">Jag godkänner att Päng skickar information via e-post. Du kan när som helst avregistrera dig.</label>
                             </div>
                         </div>
                         <button type="submit" name="subscribe" class="button">Anmäl mig</button>
