feat: add target=_blank to social media links in footer

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Päng - Ekonomi app som hjälper dig att spara</title>
+    <title>Päng - Ekonomiapp och budgetapp som hjälper dig att spara</title>
     <meta name="description" content="Päng är din personliga ekonomiassistent som hjälper dig att ta kontroll över din ekonomi – utan stress. Ladda ner appen och börja spara idag!">
     
     <!-- Open Graph / Facebook -->
@@ -125,8 +125,8 @@
         <div class="container">
             <div class="text-media-content">
                 <div class="text-content">
-                    <h2>Ekonomisk frihet börjar här!</h2>
-                    <p>Päng är din personliga ekonomiassistent som hjälper dig att ta kontroll över din ekonomi – utan stress. Genom att regelbundet uppdatera Päng får du en tydlig översikt över dina pengar, så att du kan fatta smartare beslut och känna dig trygg i din ekonomiska framtid.</p>
+                    <h2>Ekonomisk frihet börjar här</h2>
+                    <p>Päng är din personliga ekonomiassistent som ger dig full kontroll – utan stress. Genom att regelbundet uppdatera Päng får du en tydlig översikt, intressant statistik och insikt i din ekonomiska utveckling.</p>
                     <ul>
                         <li>Nå ditt sparmål snabbare och enklare</li>
                         <li>Ger dig kontroll på din ekonomi</li>
@@ -146,7 +146,7 @@
         <div class="container">
             <div class="calculator-header">
                 <h2>Ränta på ränta kalkylator – Se hur mycket ditt kapital kan växa</h2>
-                <p>Om du placerar ditt kapital i fonder, aktier eller ett sparkonto med hög ränta så skapar du goda förutsättningar för att din ekonomi ska växa. Prova vår ränta på ränta-kalkylator för att se hur mycket ditt kapital växer.</p>
+                <p>Om du placerar ditt kapital i fonder, aktier eller ett sparkonto med hög ränta skapar du goda förutsättningar för att din ekonomi ska växa. Prova vår ränta-på-ränta-kalkylator och se din potentiella framtida avkastning.</p>
             </div>
             <div class="calculator-content">
                 <div class="calculator-result">
@@ -217,7 +217,7 @@
             <div class="text-media-content">
                 <div class="text-content">
                     <h2>Från personlig lösning till en app för alla</h2>
-                    <p>Jag skapade Päng för att få en tydlig överblick över min ekonomi – utan krångliga Excel-ark. Det började som ett eget projekt, men nu vill jag dela det med dig i hopp om att det kan hjälpa dig att nå dina sparmål snabbare och få bättre koll på din ekonomi.</p>
+                    <p>Jag skapade Päng för att enkelt hålla koll på min ekonomi – utan krångliga Excel-ark. Det började som ett eget projekt, men nu vill jag dela det med dig, i hopp om att det hjälper dig att nå dina sparmål snabbare och ta kontroll över din ekonomi.</p>
                 </div>
                 <div class="media-content">
                     <img src="Assets/pang-marcus-test.jpg" alt="Marcus Strömberg">
@@ -237,15 +237,15 @@
             </div>
             <div class="footer-content">
                 <div class="social-links">
-                    <a href="https://x.com/MarcusStrmberg" class="social-link">
+                    <a href="https://x.com/MarcusStrmberg" class="social-link" target="_blank" rel="noopener noreferrer">
                         <img src="Assets/x-icon.png" alt="X icon" width="16" height="16">
                         <span>Följ mig på X</span>
                     </a>
-                    <a href="https://www.linkedin.com/in/marcus-patrick-stromberg/" class="social-link">
+                    <a href="https://www.linkedin.com/in/marcus-patrick-stromberg/" class="social-link" target="_blank" rel="noopener noreferrer">
                         <img src="Assets/linkedin-icon.png" alt="LinkedIn icon" width="16" height="16">
                         <span>Följ mig på LinkedIn</span>
                     </a>
-                    <a href="https://www.stromberg.design/" class="social-link">
+                    <a href="https://www.stromberg.design/" class="social-link" target="_blank" rel="noopener noreferrer">
                         <img src="Assets/website-icon.png" alt="Website icon" width="16" height="16">
                         <span>Besök stromberg.design</span>
                     </a>
