feat: update button hover effect and remove app store badge links

--- a/index.html
+++ b/index.html
@@ -85,12 +85,12 @@
                 <h2>Det ska vara enkelt att spara</h2>
                 <p>Oavsett om du sparar till nästa semester eller till ekonomisk frihet är det en förutsättning att ha koll på ekonomin. Detta är vad Päng hjälper dig med. Snart tillgängligt för iOS och Android.</p>
                 <div class="app-badges">
-                    <a href="#" class="app-badge">
+                    <div class="app-badge">
                         <img src="Assets/app-store-badge.svg" alt="Download on the App Store">
-                    </a>
-                    <a href="#" class="app-badge">
+                    </div>
+                    <div class="app-badge">
                         <img src="Assets/google-play-badge.svg" alt="Get it on Google Play">
-                    </a>
+                    </div>
                 </div>
             </div>
             <div class="features-grid">
