feat: improve SEO with optimized meta descriptions, sitemap.xml and robots.txt

--- a/index.html
+++ b/index.html
@@ -4,24 +4,46 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Päng - Ekonomiapp och budgetapp som hjälper dig att spara</title>
-    <meta name="description" content="Päng är din personliga ekonomiassistent som hjälper dig att ta kontroll över din ekonomi – utan stress. Ladda ner appen och börja spara idag!">
+    <meta name="description" content="Ekonomiapp och budgetapp som hjälper dig ta kontroll över din privatekonomi. Sätt sparmål, få översikt och nå ekonomisk frihet med Päng. Ladda ner idag!">
+    <meta name="keywords" content="ekonomiapp, budgetapp, spara pengar, privatekonomi, ekonomisk frihet, investeringsplanering, ränta på ränta">
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
     <meta property="og:url" content="https://pangapp.se/">
-    <meta property="og:title" content="Päng - Ekonomi app som hjälper dig att spara">
-    <meta property="og:description" content="Päng är din personliga ekonomiassistent som hjälper dig att ta kontroll över din ekonomi – utan stress. Ladda ner appen och börja spara idag!">
+    <meta property="og:title" content="Päng - Ekonomiapp som hjälper dig att spara">
+    <meta property="og:description" content="Ekonomiapp och budgetapp som hjälper dig ta kontroll över din privatekonomi. Sätt sparmål, få översikt och nå ekonomisk frihet med Päng.">
     <meta property="og:image" content="https://pangapp.se/Assets/pang-social-share.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
     <meta property="twitter:url" content="https://pangapp.se/">
-    <meta property="twitter:title" content="Päng - Ekonomi app som hjälper dig att spara">
-    <meta property="twitter:description" content="Päng är din personliga ekonomiassistent som hjälper dig att ta kontroll över din ekonomi – utan stress. Ladda ner appen och börja spara idag!">
+    <meta property="twitter:title" content="Päng - Ekonomiapp som hjälper dig att spara">
+    <meta property="twitter:description" content="Ekonomiapp och budgetapp som hjälper dig ta kontroll över din privatekonomi. Sätt sparmål, få översikt och nå ekonomisk frihet med Päng.">
     <meta property="twitter:image" content="https://pangapp.se/Assets/pang-social-share.png">
 
     <link rel="icon" type="image/svg+xml" href="Assets/pang-favicon.svg">
     <link rel="stylesheet" href="css/styles.css">
+    
+    <!-- Structured Data -->
+    <script type="application/ld+json">
+    {
+      "@context": "https://schema.org",
+      "@type": "SoftwareApplication",
+      "name": "Päng",
+      "applicationCategory": "FinanceApplication",
+      "operatingSystem": "iOS, Android",
+      "description": "Päng är din personliga ekonomiassistent som hjälper dig att ta kontroll över din ekonomi – utan stress. Med smarta verktyg för budgetering, sparmål och investeringsplanering.",
+      "offers": {
+        "@type": "Offer",
+        "price": "0",
+        "priceCurrency": "SEK"
+      },
+      "author": {
+        "@type": "Person",
+        "name": "Marcus Strömberg"
+      }
+    }
+    </script>
 </head>
 <body>
     <!-- Message Bar -->
