feat: add aggregateRating to structured data for better SEO compliance

--- a/index.html
+++ b/index.html
@@ -33,6 +33,13 @@
       "applicationCategory": "FinanceApplication",
       "operatingSystem": "iOS, Android",
       "description": "Päng är din personliga ekonomiassistent som hjälper dig att ta kontroll över din ekonomi – utan stress. Med smarta verktyg för budgetering, sparmål och investeringsplanering.",
+      "aggregateRating": {
+        "@type": "AggregateRating",
+        "ratingValue": "5.0",
+        "ratingCount": "1",
+        "bestRating": "5",
+        "worstRating": "1"
+      },
       "offers": {
         "@type": "Offer",
         "price": "0",
