feat: add favicon files and update paths

--- a/index.html
+++ b/index.html
@@ -21,7 +21,14 @@
     <meta property="twitter:description" content="Ekonomiapp och budgetapp som hjälper dig ta kontroll över din privatekonomi. Sätt sparmål, få översikt och nå ekonomisk frihet med Päng.">
     <meta property="twitter:image" content="https://pangapp.se/Assets/pang-social-share.png">
 
-    <link rel="icon" type="image/svg+xml" href="Assets/pang-favicon.svg">
+    <!-- Favicons -->
+    <link rel="apple-touch-icon" sizes="180x180" href="Assets/Favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="Assets/Favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="Assets/Favicon/favicon-16x16.png">
+    <link rel="icon" type="image/x-icon" href="Assets/Favicon/favicon.ico">
+    <link rel="manifest" href="site.webmanifest">
+    <meta name="theme-color" content="#0C3237">
+
     <link rel="stylesheet" href="css/styles.css">
     
     <!-- Structured Data -->
