--- a/index.html
+++ b/index.html
@@ -264,7 +264,7 @@
     <!-- Final CTA Section -->
     <section class="index-cta" id="cta">
         <div class="index-cta-content">
-            <h2>Bli först att få tillgång till Päng</h2>
+            <h2>Bli först att få tillgång!</h2>
             <p>Anmäl dig till väntelistan och var bland de första att få tillgång till Päng när vi lanserar.</p>
             <form action="https://gmail.us9.list-manage.com/subscribe/post?u=cc17af8959840de806baa7bdb&amp;id=cfd98eab6f&amp;f_id=00bb57e1f0" method="post" id="mc-embedded-subscribe-form-cta" name="mc-embedded-subscribe-form" class="email-signup validate">
                 <div class="mc-field-group">
