Fix paths and add missing script in ekonomiapp-utgifter.html

--- a/ekonomiapp-utgifter.html
+++ b/ekonomiapp-utgifter.html
@@ -9,14 +9,14 @@
     
     <!-- Open Graph / Facebook -->
     <meta property="og:type" content="website">
-    <meta property="og:url" content="https://pangapp.se/pages/ekonomiapp-utgifter">
+    <meta property="og:url" content="https://pangapp.se/ekonomiapp-utgifter">
     <meta property="og:title" content="Ekonomiapp för Utgifter | Spåra & Hantera Utgifter Enkelt | Päng">
     <meta property="og:description" content="Få full kontroll över dina utgifter med Päng ekonomiapp. Spåra utgifter enkelt, se trender och nå dina ekonomiska mål.">
     <meta property="og:image" content="https://pangapp.se/Assets/pang-social-share.png">
 
     <!-- Twitter -->
     <meta property="twitter:card" content="summary_large_image">
-    <meta property="twitter:url" content="https://pangapp.se/pages/ekonomiapp-utgifter">
+    <meta property="twitter:url" content="https://pangapp.se/ekonomiapp-utgifter">
     <meta property="twitter:title" content="Ekonomiapp för Utgifter | Spåra & Hantera Utgifter Enkelt | Päng">
     <meta property="twitter:description" content="Få full kontroll över dina utgifter med Päng ekonomiapp. Spåra utgifter enkelt, se trender och nå dina ekonomiska mål.">
     <meta property="twitter:image" content="https://pangapp.se/Assets/pang-social-share.png">
@@ -38,7 +38,7 @@
       "@type": "WebPage",
       "name": "Ekonomiapp för Utgifter",
       "description": "Få full kontroll över dina utgifter med Päng ekonomiapp. Spåra utgifter enkelt, se trender och nå dina ekonomiska mål.",
-      "url": "https://pangapp.se/pages/ekonomiapp-utgifter",
+      "url": "https://pangapp.se/ekonomiapp-utgifter",
       "mainEntity": {
         "@type": "SoftwareApplication",
         "name": "Päng Ekonomiapp",
@@ -63,10 +63,10 @@
     <!-- Header -->
     <header class="header">
         <div class="container">
-            <a href="../" class="logo">
-                <img src="../Assets/Pang-logo-teal.svg" alt="Päng logo">
+            <a href="/" class="logo">
+                <img src="Assets/Pang-logo-teal.svg" alt="Päng logo">
             </a>
-            <a href="../" class="back-link">
+            <a href="/" class="back-link">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
                     <path d="M19 12H5M5 12L12 19M5 12L12 5" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
                 </svg>
@@ -261,5 +261,6 @@
     </footer>
 
     <script src="js/main.js"></script>
+    <script src="js/signup.js"></script>
 </body>
 </html> 
