Move landing-page.css to public css directory and update reference

--- a/ekonomiapp-utgifter.html
+++ b/ekonomiapp-utgifter.html
@@ -29,7 +29,7 @@
     <meta name="theme-color" content="#0C3237">
 
     <link rel="stylesheet" href="css/styles.css">
-    <link rel="stylesheet" href="_private/templates/landing-page.css">
+    <link rel="stylesheet" href="css/landing-page.css">
     
     <!-- Structured Data -->
     <script type="application/ld+json">
