Update message bar text

--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 <body>
     <!-- Message Bar -->
     <div class="message-bar">
-        <p>OBS! All din data är 100% privat.</p>
+        <p>Snart tillgängligt för iOS och Android.</p>
     </div>
 
     <!-- Header -->
