Fix image paths in ekonomiapp-utgifter.html

--- a/ekonomiapp-utgifter.html
+++ b/ekonomiapp-utgifter.html
@@ -116,7 +116,7 @@
                     </ul>
                 </div>
                 <div class="media-content">
-                    <img src="Assets/Langing page images/ekonomiapp-kvinna.jpg" alt="Person som använder Päng för att spåra utgifter">
+                    <img src="Assets/Landing page images/ekonomiapp-kvinna.jpg" alt="Person som använder Päng för att spåra utgifter">
                 </div>
             </div>
         </div>
@@ -170,7 +170,7 @@
                     <a href="#cta" class="button">Skriv upp mig på väntelistan</a>
                 </div>
                 <div class="media-content">
-                    <img src="Assets/Langing page images/ekonomiapp-man.jpg" alt="Steg för steg guide för Päng">
+                    <img src="Assets/Landing page images/ekonomiapp-man.jpg" alt="Steg för steg guide för Päng">
                 </div>
             </div>
         </div>
