Update asset paths to use lowercase directory name

--- a/ekonomiapp-utgifter.html
+++ b/ekonomiapp-utgifter.html
@@ -22,9 +22,9 @@
     <meta property="twitter:image" content="https://pangapp.se/Assets/pang-social-share.png">
 
     <!-- Favicons -->
-    <link rel="apple-touch-icon" sizes="180x180" href="Assets/Favicon/apple-touch-icon.png">
-    <link rel="icon" type="image/png" sizes="32x32" href="Assets/Favicon/favicon-32x32.png">
-    <link rel="icon" type="image/png" sizes="16x16" href="Assets/Favicon/favicon-16x16.png">
+    <link rel="apple-touch-icon" sizes="180x180" href="assets/Favicon/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="assets/Favicon/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="assets/Favicon/favicon-16x16.png">
     <link rel="manifest" href="site.webmanifest">
     <meta name="theme-color" content="#0C3237">
 
@@ -64,7 +64,7 @@
     <header class="header">
         <div class="container">
             <a href="/" class="logo">
-                <img src="Assets/Pang-logo-teal.svg" alt="Päng logo">
+                <img src="assets/Pang-logo-teal.svg" alt="Päng logo">
             </a>
             <a href="/" class="back-link">
                 <svg width="24" height="24" viewBox="0 0 24 24" fill="none" xmlns="http://www.w3.org/2000/svg">
@@ -116,7 +116,7 @@
                     </ul>
                 </div>
                 <div class="media-content">
-                    <img src="Assets/Landing%20page%20images/ekonomiapp-kvinna.jpg" alt="Person som använder Päng för att spåra utgifter">
+                    <img src="assets/Landing%20page%20images/ekonomiapp-kvinna.jpg" alt="Person som använder Päng för att spåra utgifter">
                 </div>
             </div>
         </div>
@@ -132,21 +132,21 @@
             <div class="features-grid">
                 <div class="feature-card">
                     <div class="feature-icon">
-                        <img src="Assets/savings.svg" alt="Utgiftsspårning ikon">
+                        <img src="assets/savings.svg" alt="Utgiftsspårning ikon">
                     </div>
                     <h3>Ekonomisk medvetenhet</h3>
                     <p>Genom att aktivt registrera dina utgifter bygger du bättre ekonomiska vanor och får en tydligare förståelse för hur du spenderar dina pengar.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
-                        <img src="Assets/trend-up.svg" alt="Trender ikon">
+                        <img src="assets/trend-up.svg" alt="Trender ikon">
                     </div>
                     <h3>Utgiftstrender</h3>
                     <p>Följ dina utgifter över tid och få historisk utveckling av utgifter och annan intressant information som hjälper dig att spara pengar.</p>
                 </div>
                 <div class="feature-card">
                     <div class="feature-icon">
-                        <img src="Assets/happy.svg" alt="Insikter ikon">
+                        <img src="assets/happy.svg" alt="Insikter ikon">
                     </div>
                     <h3>Allt på en plats</h3>
                     <p>Du kan även spåra mer än bara utgifter. Vi hjälper dig att hålla koll på dina inkomster, tillgångar och sparmål.</p>
@@ -170,7 +170,7 @@
                     <a href="#cta" class="button">Skriv upp mig på väntelistan</a>
                 </div>
                 <div class="media-content">
-                    <img src="Assets/Landing%20page%20images/ekonomiapp-man.jpg" alt="Steg för steg guide för Päng">
+                    <img src="assets/Landing%20page%20images/ekonomiapp-man.jpg" alt="Steg för steg guide för Päng">
                 </div>
             </div>
         </div>
@@ -233,7 +233,7 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-logo">
-                <img src="Assets/pang-logo-white.svg" alt="Päng logo">
+                <img src="assets/pang-logo-white.svg" alt="Päng logo">
             </div>
             <div class="footer-disclaimer">
                 <p>Denna tjänst tillhandahåller endast information och verktyg för ekonomisk planering. Vi erbjuder inte finansiell rådgivning, och vi ansvarar inte för eventuella beslut baserade på den information som presenteras i appen. För personlig finansiell rådgivning, kontakta en licensierad rådgivare.</p>
@@ -241,15 +241,15 @@
             <div class="footer-content">
                 <div class="social-links">
                     <a href="https://x.com/MarcusStrmberg" class="social-link" target="_blank" rel="noopener noreferrer">
-                        <img src="Assets/x-icon.png" alt="X icon" width="16" height="16">
+                        <img src="assets/x-icon.png" alt="X icon" width="16" height="16">
                         <span>Följ mig på X</span>
                     </a>
                     <a href="https://www.linkedin.com/in/marcus-patrick-stromberg/" class="social-link" target="_blank" rel="noopener noreferrer">
-                        <img src="Assets/linkedin-icon.png" alt="LinkedIn icon" width="16" height="16">
+                        <img src="assets/linkedin-icon.png" alt="LinkedIn icon" width="16" height="16">
                         <span>Följ mig på LinkedIn</span>
                     </a>
                     <a href="https://www.stromberg.design/" class="social-link" target="_blank" rel="noopener noreferrer">
-                        <img src="Assets/website-icon.png" alt="Website icon" width="16" height="16">
+                        <img src="assets/website-icon.png" alt="Website icon" width="16" height="16">
                         <span>Besök stromberg.design</span>
                     </a>
                 </div>
